--- a/src/components/Characters/styles/characters.scss
+++ b/src/components/Characters/styles/characters.scss
@@ -1,3 +1,39 @@
+@import "../../../styles/app.scss";
+
 .container {
   color: white;
+}
+
+.character-container {
+  border-bottom: solid 1px #463B5E;
+  margin-bottom: 30px;
+  width: calc(100% - 40px);
+
+  .character-name {
+    margin-top: 10px;
+    font-weight: 500;
+  }
+
+  .character-gender {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: #B9B8BC;
+  }
+  .character-planet {
+    margin-bottom: 20px;
+    width: fit-content;
+    padding-left: 10px;
+    padding-right: 15px;
+    border-radius: 20px;
+    background-color: #2E2C35;
+  }
+
+  .character-favorite {
+    position: relative; 
+    float: right;
+    right: 20px;
+    bottom: 110px;
+    border: none;
+    background-color: $base-color;
+  }
 }
